--- a/Planner 2.0/Planner 2.0/Form1.resx
+++ b/Planner 2.0/Planner 2.0/Form1.resx
@@ -127,7 +127,7 @@
     <value>Planner: programmed and developed by Clarence Yang
 Project start date: 19/4/2019
 Current version: 2.1.2 
-latest release date: 
+latest release date: 1/09/2021
 
 Planner is a program that allows you to easily manage 
 your tasks. 
@@ -219,9 +219,6 @@ channel at our discord server:
   </data>
   <metadata name="metroStyleManager1.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
     <value>342, 17</value>
-  </metadata>
-  <metadata name="timer2.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
-    <value>508, 17</value>
   </metadata>
   <metadata name="saveTimer.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
     <value>595, 17</value>
