--- a/Planner 2.0/Planner 2.0/Properties/Resources.resx
+++ b/Planner 2.0/Planner 2.0/Properties/Resources.resx
@@ -205,4 +205,10 @@
   <data name="_1147px_Google_Drive_icon__2020__svg" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\1147px-Google_Drive_icon_(2020).svg.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="discord_icon_130958" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\discord_icon_130958.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="_25231" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\25231.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
 </root>
